# src/router/router-donations.js
@@ -12,6 +12,9 @@ const {
   validateUpdateDonation,
 } = require('../validators/donations/donation-validators');
 
+const ControllerOnlineDonations = require('../controller/controller-online-donations');
+const { validateListSubscriptions } = require('../validators/donations/online-donation-validators');
+
 const router = express.Router();
 
 router.use(requireAuth);
@@ -20,6 +23,8 @@ router.get('/', requirePermission('donations:read'), validateRequest(validateLis
 router.get('/summary', requirePermission('donations:read'), validateRequest(validateSummary), asyncHandler(ControllerDonations.summary));
 router.get('/monthly', requirePermission('donations:read'), validateRequest(validateMonthly), asyncHandler(ControllerDonations.monthly));
 router.get('/export', requirePermission('donations:export'), validateRequest(validateListDonations), asyncHandler(ControllerDonations.exportCsv));
+router.get('/subscriptions', requirePermission('donations:read'), validateRequest(validateListSubscriptions), asyncHandler(ControllerOnlineDonations.listSubscriptions));
+router.post('/subscriptions/:id/cancel', requirePermission('donations:update'), validateRequest(validateIdParam), asyncHandler(ControllerOnlineDonations.cancelSubscription));
 router.get('/:id', requirePermission('donations:read'), validateRequest(validateIdParam), asyncHandler(ControllerDonations.getById));
 router.post('/', requirePermission('donations:create'), validateRequest(validateCreateDonation), asyncHandler(ControllerDonations.create));
 router.patch('/:id', requirePermission('donations:update'), validateRequest(validateIdParam), validateRequest(validateUpdateDonation), asyncHandler(ControllerDonations.update));
